src/vs/languages/less/common/parser/less.grammar.txt
stylesheet  : [ CDO | CDC | S | statement ]*;
statement   : ruleset | at-rule;
at-rule     : ATKEYWORD S* any* [ block | ';' S* ];
block       : '{' S* [ any | block | ATKEYWORD S* | ';' S* ]* '}' S*;
ruleset     : selector? '{' S*  [ ruleset | [[declaration | mixin]? [ ';' S* [declaration | mixin]? ]*]] '}' S*;
selector    : any+;
declaration : property S* ':' S* value;
mixin		: selector;
property    : IDENT;
value       : [ any | block | ATKEYWORD S* | at-rule ]+;
any         : [ IDENT | NUMBER | PERCENTAGE | DIMENSION | STRING
              | DELIM | URI | HASH | UNICODE-RANGE | INCLUDES
              | DASHMATCH | ':' | FUNCTION S* [any|unused]* ')'
              | '(' S* [any|unused]* ')' | '[' S* [any|unused]* ']'
              ] S*;
unused      : block | ATKEYWORD S* | ';' S* | CDO S* | CDC S*;
